--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_new"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -32,14 +32,12 @@
             android:screenOrientation="portrait"/>
 
         <activity
-            android:name=".Settings_Activity"
+            android:name=".SettingsActivity"
             android:label="@string/acc_settings"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"/>
 
-        <activity android:name=".SettingsActivity"
-            android:screenOrientation="portrait"/>
-        />
+
         <activity android:name=".ChangeEmail"
             android:label="@string/acc_settings1"
             android:screenOrientation="portrait"/>
